--- a/Machine Learning/Neural Network with Numpy.ipynb
+++ b/Machine Learning/Neural Network with Numpy.ipynb
@@ -48,15 +48,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "V29SZpPn8S69"
-   },
-   "source": [
-    "This MNIST dataset can be directly downloaded via various routes including tensorflow dataset repository, keras dataset, and scikit-learn. This time, you can use `sklearn.datasets` module."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -108,15 +99,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "kILkvez98bVl"
-   },
-   "source": [
-    "You can also check the class distribution. Is it balanced or not?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -149,16 +131,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "KEc2na5f9tRg"
-   },
-   "source": [
-    "You may also need to apply normalization for better performance. Since it is clear that its maximum value is 255, you can simply normalize it by dividing the whole value by 255 (then the dataset will range from 0 to 1). You can use NumPy's broadcasting to divide the matrix by one scalar value. It is also possible to further standardize it to have a centeralized mean, but this time it is optional.\n",
-    "- Apply normalization to X to have the range [0, 1]"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -167,16 +139,6 @@
    "outputs": [],
    "source": [
     "X_normalized = X / 255.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zmmuNtw2d8dX"
-   },
-   "source": [
-    "If you take a look at `y`, it has string labels! It might be disturbing when you need to handle them later, so let's also convert them to an integer form.\n",
-    "- Change the type of the labels to integer"
    ]
   },
   {
@@ -191,20 +153,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "TqeW4C00l5se"
-   },
-   "source": [
-    "Next, you need to split the dataset into two parts using scikit-learn's `train_test_split` method.\n",
-    "- Use scikit-learn's `train_test_split` to create training and test sets.\n",
-    "- Set **test_size** to 20%.\n",
-    "- Enable stratification and shuffling.\n",
-    "- use `X_normalized` and `y_integer`.\n",
-    "- set `random_state` to the pre-defined variable `RANDOM_STATE`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -213,15 +161,6 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X_normalized, y_integer, test_size = 0.2, stratify = y_integer,shuffle= True, random_state = RANDOM_STATE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "vcUJo3uj6sCa"
-   },
-   "source": [
-    "Please print the mean and the standard deviation of `X_train` here (for validation purpose)."
    ]
   },
   {
@@ -300,17 +239,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "tVROBu9_py1h"
-   },
-   "source": [
-    "First, you need to fix the labels, which are now in a sparse form, to have a one-hot encoded form for better computation of error terms using NumPy's vectorization. Let's create a function that receives a label vector and transform it into a one-hot encoded label matrix.\n",
-    "\n",
-    "- Complete the `one_hot` function."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -345,15 +273,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5dAPaf1708Bs"
-   },
-   "source": [
-    "Test your code here (see the expected outcome above)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -376,20 +295,6 @@
    ],
    "source": [
     "one_hot(np.array([1,0,2,3]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "7niKihIdpYa5"
-   },
-   "source": [
-    "Next, you may also need a sigmoid function for the output values as you are dealing with a classification problem. Sigmoid can be represented as follows:\n",
-    "\n",
-    "$$ h_ \\theta (x) =  \\frac{\\mathrm{1} }{\\mathrm{1} + e^{-x} }  $$\n",
-    "\n",
-    "\n",
-    "- Complete the sigmoid function below that supports both vectors and scalars (this can be automatically handled if you use NumPy)."
    ]
   },
   {
@@ -461,49 +366,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Sn2YtPQk0pXK"
-   },
-   "source": [
-    "Now it is time to create your neural network model from scratch! You eventually need to integrate everything into scikit-learn's pipeline, so it's important to have an appropriate class structure. To do this, you may need to extend `BaseEstimator` and `TransformerMixin` to make scikit-learn recognize that your class is a valid classifier.\n",
-    "\n",
-    "You are going to develop a neural network with one layer for simplicity. That means you will have two different sets of weights.\n",
-    "\n",
-    "- First layer: [input size (number of features), hidden layer size]\n",
-    "- Second layer (or output layer): [hidden layer size, output size (number of classes)]\n",
-    "\n",
-    "In the class structure `FullyConnectedNetwork` below, you will develop five different methods as follows:\n",
-    " - `compile`: Given parameters, this function will initialize weight and bias values needed for our neural network model.\n",
-    "   - Here, you will initialize bias and weights based on a chosen initialization technique.\n",
-    "        - You need to implement three different options: normal, Xavier, and he\n",
-    "        - Each technique initializes the weight using the normal distribution but different standard deviation. The mean value remains the same.\n",
-    "          - Normal:\n",
-    "$ \\mu = 0, \\sigma = 0.1 $\n",
-    "          - Xavier:\n",
-    "$ \\mu = 0, \\sigma = \\sqrt{\\frac{2}{n_{in} + n_{out}}}$\n",
-    "          - He:\n",
-    "$ \\mu = 0, \\sigma = \\sqrt{\\frac{2}{n_{in}}}$\n",
-    " - `forward`: Perform a forward propagation with the weights saved in the model.\n",
-    " - `back_propagation`: Perform a back propagation (training the model).\n",
-    "    - Most of the derivative terms are already provided. You will only need to finish some part of it.\n",
-    "      - Weight and bias update\n",
-    "      - Derivative of the sigmoid function\n",
-    "        - $σ(x)=σ(x)(1−σ(x))$.\n",
-    "\n",
-    " - `fit`: Run the whole fitting process (forward and backpropagation for each batch).\n",
-    " - `cost`: Calculate the cost (cross-entropy) together with the elastic net (l1/l2). The fomula is described in the function.\n",
-    " - `predict`: With a trained model, perform a prediction of unseen data by running the forward propagation with the trained weight and bias.\n",
-    " - `evaluate`: With trained weight and bias, perform a prediction of test data and calculate the performance metric (in our case, those are training and validation accuracy scores).\n",
-    "\n",
-    "**This exercise is based on *Chapter 12* of the coursebook Python Machine Learning with some modification and additional tasks - so please note that the structure and requirements are not the same.**\n",
-    "\n",
-    "You are free to check out the coursebook for reference. However, to solve the tasks, you should understand the logic clearly."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "id": "UxEdUv9hmiTd"
    },
@@ -787,35 +651,16 @@
     "      self.W[1] = self.W[1] - self.eta * delta_w_out\n",
     "      self.B[1] = self.B[1] - self.eta * delta_b_out\n",
     "\n",
-    "      # END OF CHANGE\n",
-    "      #############################################\n",
-    "\n",
-    "      # HIDDEN WEIGHTS (INPUT-LAYER)\n",
-    "\n",
-    "      #############################################\n",
-    "      # CHANGE THIS PART\n",
-    "\n",
-    "      # To continue to take derivatives backwards, you need to take a derivative of the sigmoid function.\n",
-    "      # Here you are trying to take derivative of a sigmoided output A[0].\n",
-    "      # Derivative of sigmoid σ(x) can be represented as σ(x)(1−σ(x)).\n",
+    "     \n",
     "\n",
     "      sigmoid_derivative_h = A[0] * (1 - A[0])\n",
     "\n",
-    "      # END OF CHANGE\n",
-    "      #############################################\n",
     "\n",
     "      delta_h = (np.dot(delta_out, self.W[1].T) * sigmoid_derivative_h)\n",
     "      grad_w_h = np.dot(X_train[batch_idx].T, delta_h)\n",
     "      grad_b_h = np.sum(delta_h, axis=0)\n",
     "\n",
-    "      #############################################\n",
-    "      # CHANGE THIS PART\n",
-    "\n",
-    "      # Using the final gradients of the weight and bias (grad_w_h, grad_b_h).\n",
-    "      # The gradient of w and b are already calculated and all you need to do is to merge it with l1/l2 terms.\n",
-    "      # Change the values of self.W[0], self.B[0] (output weight and bias).\n",
-    "      # - You should also apply l1 and l2 normalization to the weight (not to the bias).\n",
-    "      # - You should use the learning rate (self.eta) when changing the value.\n",
+    "      \n",
     "\n",
     "      delta_w_h = grad_w_h + self.l2 * self.W[0] + self.l1 * np.sign(self.W[0])\n",
     "      delta_b_h = grad_b_h\n",
@@ -823,8 +668,7 @@
     "      self.W[0] = self.W[0] - self.eta * delta_w_h\n",
     "      self.B[0] = self.B[0] - self.eta * delta_b_h\n",
     "\n",
-    "      # END OF CHANGE\n",
-    "      #############################################\n",
+    "      \n",
     "\n",
     "\n",
     "    def evaluate(self, epoch, X_train, X_valid, y_train, y_valid):\n",
@@ -843,25 +687,21 @@
     "        Append the cost and performance metrics of current epoch to self.history\n",
     "      \"\"\"\n",
     "\n",
-    "      # Step 1. Call self.forward on X_train to calculate the output with current weights and bias of the model.\n",
+    "      \n",
     "      Z, A = self.forward(X_train)\n",
     "\n",
-    "      # Step 2. call predict functions with both X_train and X_valid and save the predicted values accordingly.\n",
+    "      \n",
     "      y_train_pred = self.predict(X_train)\n",
     "      y_valid_pred = self.predict(X_valid)\n",
     "\n",
-    "      # Step 2. Call self.cost with one hot encoded y_train and the probability of the output prediction.\n",
-    "      # Save it into the variable 'cost'.\n",
+    "      \n",
     "      cost = self.cost(one_hot(y_train), A[-1])\n",
     "\n",
-    "      # Step 4. Calculate accuracy scores.\n",
-    "      # - between y_train_pred and y_train.\n",
-    "      # - between y_valid_pred and y_valid.\n",
+    "      \n",
     "      train_acc = np.sum(y_train == y_train_pred) / y_train.shape[0]\n",
     "      valid_acc = np.sum(y_valid == y_valid_pred) / y_valid.shape[0]\n",
     "\n",
-    "      # Step 5. Save the results into the dictionary.\n",
-    "      # This part is already complete.\n",
+    "     \n",
     "      if self.debug == True:\n",
     "        print('%d/%d | Cost: %.2f '\n",
     "                        '| Train/Valid Acc.: %.2f%%/%.2f%% ' %\n",
@@ -889,49 +729,40 @@
     "\n",
     "        self.history = {'cost': [], 'train_acc': [], 'valid_acc': []}\n",
     "\n",
-    "        # Step 1: Select different training and test sets. Use scikit-learn's train_test_split.\n",
-    "        # Turn on the stratification option and use self.validation_rate\n",
+    "        \n",
     "        X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size = self.validation_rate, stratify = y, random_state = self.seed)\n",
     "\n",
-    "        # Step 2: Compile (initialize) the parameters by running self.compile with correct number of features and outputs\n",
-    "        # WRITE YOUR CODE HERE\n",
+    "        \n",
     "        self.compile(X_train.shape[1], len(np.unique(y_train)))\n",
     "\n",
     "\n",
     "\n",
-    "        #\n",
-    "\n",
-    "        # Step 3: Prepare one-hot encoded training labels by using one_hot function on y_train\n",
+    "       \n",
     "        y_train_enc = one_hot(y_train)\n",
     "\n",
-    "        # Step 4: iterate over training epochs\n",
+    "       \n",
     "        for i in range(self.epochs):\n",
     "\n",
-    "            # Step 5: set the indices\n",
-    "            # - if self.shuffle is True, shuffle the indices using self.random.shuffle or permutation\n",
+    "            \n",
     "            indices = np.arange(X_train.shape[0])\n",
     "            if self.shuffle is True:\n",
     "                indices = self.random.permutation(indices)\n",
     "\n",
-    "            # Step 6: iterate over the data\n",
-    "            # - For each iteration, you need to choose the data\n",
+    "           \n",
     "            for start_idx in range(0, indices.shape[0] - self.batch_size +\n",
     "                                   1, self.batch_size):\n",
     "                batch_idx = indices[start_idx:start_idx + self.batch_size]\n",
     "\n",
-    "                # Step 7: Run a forward propagation\n",
+    "                #  forward propagation\n",
     "                Z, A = self.forward(X_train[batch_idx])\n",
-    "                # Step 8: Run back propagation\n",
-    "                # - Use X_train, batch_idx, A, and y_train_enc\n",
-    "                # WRITE YOUR CODE HERE\n",
+    "                \n",
     "                \n",
     "                self.back_propagation(X_train, batch_idx, A, y_train_enc)\n",
     "\n",
     "\n",
-    "                #\n",
+    "                \n",
     "\n",
-    "            # call evaluate function after inner loop (whole batch cycles) is complete\n",
-    "            # WRITE YOUR CODE HERE\n",
+    "         \n",
     "            \n",
     "            self.evaluate(i, X_train, X_valid, y_train, y_valid)\n",
     "\n",
@@ -960,23 +791,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "4QAzKAjhhwHu"
-   },
-   "source": [
-    "After you finish developing the methods in the class structure, you can create a new instance by calling 'FullyConnectedNetwork' class. Create your model using the following parameters:\n",
-    "\n",
-    "- n_hidden = 150\n",
-    "- l2 = 0.01\n",
-    "- epochs = 30\n",
-    "- eta = 0.001\n",
-    "- batch_size = 50\n",
-    "- shuffle = True\n",
-    "- seed = `RANDOM_STATE`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -985,16 +799,6 @@
    "outputs": [],
    "source": [
     "nn = FullyConnectedNetwork(n_hidden=150, l2=0.01,  epochs=30, eta=0.001,  batch_size=50, shuffle=True, seed=RANDOM_STATE )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IXBBoj_oh5Vt"
-   },
-   "source": [
-    "Then the fit methods will run the model for 30 epochs, and depending on your computing power, it might take a few minutes to an hour.\n",
-    " - Fit your network on `X_train` and `y_train` and save the output to `history`."
    ]
   },
   {
@@ -1046,15 +850,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "EGuc6mti3lIp"
-   },
-   "source": [
-    "After the training is done, you should be able to plot the training and validation accuracy scores over time using the `history` dictionary returned by the fit function."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -1084,12 +879,12 @@
     "id": "rPA_LeMzqyFc"
    },
    "source": [
-    "## 4. Integrate our classifier into the scikit-learn pipeline and the randomized search"
+    "## 4.  classifier into the scikit-learn pipeline and the randomized search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "id": "7KQyD1cf1Na8"
    },
@@ -1128,9 +923,7 @@
     }
    ],
    "source": [
-    "# Create: class Normalizer(BaseEstimator, TransformerMixin)\n",
-    "#\n",
-    "#\n",
+    "\n",
     "class Normalizer(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self):\n",
     "        pass\n",
@@ -1166,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "id": "Lcykfo9x6zY8"
    },
@@ -1180,30 +973,8 @@
     }
    ],
    "source": [
-    "# PRINT YOUR SCORE HERE\n",
-    "print(pipeline_score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "nMdqSR8k4hRI"
-   },
-   "source": [
-    "- Task 4: Randomized search\n",
-    "  - After constructing your pipeline, you can perform a randomized search on it.\n",
-    "  - Define your parameter grid with the following information. Use `np.arange` if neccesary:\n",
-    "    - l1 of classifier: 0 to 0.01 (included) with step size 0.002.\n",
-    "    - l2 of classifier: 0 to 0.01 (included) with step size 0.002.\n",
-    "    - size of hidden layer of classifier: 20 to 100 with step size 10\n",
-    "    - learning rate of classifier: 0.0001 to 0.001 with step size 0.0001\n",
-    "    - initialization techniques of classifier: [normal, xavier, he]\n",
-    "  - Run your randomized search with cv=3. Fit it on your previous `X_train` and `y_train`.\n",
-    "    - Make 10 different attempts.\n",
-    "    - Set `random_state` = `RANDOM_STATE`\n",
-    "  - Report your best classifier and best score into the variables `best_classifier` and `best_score`.\n",
     "\n",
-    "  - **Note that this task will take a few hours based on computing power, so you may not need to finish the run. The submission is regarded correct if the logic is correct - if you cannot finish the task before the submission.**"
+    "print(pipeline_score)"
    ]
   },
   {
@@ -1292,15 +1063,6 @@
    "source": [
     "# PRINT YOUR SCORES HERE\n",
     "print(best_classifier, best_score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "w9gSkzvszU1K"
-   },
-   "source": [
-    "# END"
    ]
   }
  ],
